--- a/templates/fiskaltrust.pdf/styles/main.css
+++ b/templates/fiskaltrust.pdf/styles/main.css
@@ -1,17 +1,20 @@
-
 .TocHeader, .TocNavigationVertical {
     display: none !important;
 }
 
-body {
-    counter-reset: h1;
-    font-family: 'Trebuchet MS' !important;
+body, h3, h4, h5, h6 {
+    font-family: "Trebuchet MS" !important;
 }
 
-p {
-    letter-spacing: 1.5px !important;  /* https://github.com/wkhtmltopdf/wkhtmltopdf/issues/4068 */
+code, p {
+    font-size: .78em !important;
 }
 
+.hljs {
+    font-size: 1.5em !important;
+}
+
+body {counter-reset: h1;}
 h1 {counter-reset: h2}
 h2 {counter-reset: h3}
 h3 {counter-reset: h4}
